--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,11 @@ compatibility_date = "2026-02-01"
 
 assets = { directory = "./dist", binding = "ASSETS", not_found_handling = "single-page-application", run_worker_first = ["/api/*"] }
 
+[vars]
+AI_PROVIDER = "openai"
+CLOUD_OCR_DAILY_LIMIT = "20"
+AI_MEANING_DAILY_LIMIT = "20"
+
 [[d1_databases]]
 binding = "DB"
 database_name = "nanjyo_lexicon"
