feat: serve app under /aiyume_english path

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,13 +6,13 @@ routes = [
   { pattern = "www.ai-yu-me.com/*", zone_name = "ai-yu-me.com" }
 ]
 
-assets = { directory = "./dist", binding = "ASSETS", not_found_handling = "single-page-application", run_worker_first = ["/api/*"] }
+assets = { directory = "./dist", binding = "ASSETS", not_found_handling = "single-page-application", run_worker_first = true }
 
 [vars]
 AI_PROVIDER = "openai"
 CLOUD_OCR_DAILY_LIMIT = "20"
 AI_MEANING_DAILY_LIMIT = "20"
-APP_URL = "https://ai-yu-me.com"
+APP_URL = "https://ai-yu-me.com/aiyume_english"
 
 [[d1_databases]]
 binding = "DB"
